--- a/views/layout.jade
+++ b/views/layout.jade
@@ -22,9 +22,9 @@ body
 			.navbar-collapse.collapse
 				ul.nav.navbar-nav
 					li.active
-						a(href='#') Link
+						a(href='#') Home
 					li
-						a(href='#') Link
+						a(href='#') Active Threads
 					li
 						a(href='#') Link
 					li.dropdown
