--- a/views/partials/comment.jade
+++ b/views/partials/comment.jade
@@ -1,3 +1,3 @@
 .panel.panel-default(id=comment.id)
 	.panel-heading <strong>#{comment.author}</strong> in <a href = "http://reddit.com/#{topic.info.id}">#{topic.info.title}</a> (<a href="http://reddit.com/r/#{topic.info.subreddit}">#{topic.info.subreddit}</a>) #{comment.score} pts <a class = 'pull-right' target='_blank' href = 'http://reddit.com#{topic.info.permalink}#{comment.id}'><span class = 'glyphicon glyphicon-comment'></span></a>
-	.panel-body=comment.body
+	.panel-body!= md(comment.body)
